# FusionEstimation

./: CMakeLists.txt  Readme.md  package.xml
MultiplotConfig/: Comprison.xml  Foot-Fip-Position.xml  FusionState.xml  StateCheck.xml
cfg/: EstimatorConfig.cfg  fusion_estimator_config.yaml
include/: FusionEstimation.h  Sensors.h
launch/: FusionEstimator.launch
msg/: LowState.msg
src/: FusionEstimation.cpp  FusionEstimationNode.cpp  Sensors.cpp
urdf/: aliengo_generated_edited.urdf
