<?xml version="1.0"?>
<package format="2">
  <name>fusion_estimator</name>
  <version>0.0.0</version>
  <description>The fusion_estimator packages.</description>
  <maintainer email="sunminxing20@gmail.com">Minxing Sun</maintainer>
  <license>BSD</license>
  <author email="sunminxing20@gmail.com">Minxing Sun</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <!-- <depend>ocs2_quadruped_msgs</depend> -->
</package>